Removed the old CLI tool